# slop-gaurd

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  action.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  configuration.md  github_action.md  roadmap.md  rules.md
slopguard/: __init__.py  __main__.py  cli.py  config.py  models.py
slopguard/autofix/: __init__.py  engine.py  safe_fixes.py
slopguard/engine/: __init__.py  analyzer.py  diff_loader.py  repo_baseline.py  scoring.py
slopguard/formatters/: __init__.py  json.py  markdown.py  markdown_summary.py  reviewdog.py  sarif.py  text.py
slopguard/parsers/: __init__.py  base.py  generic.py  javascript_parser.py  python_parser.py
slopguard/rules/: __init__.py  abstraction_inflation.py  base.py  broad_exception.py  dead_code_signals.py  duplicate_helper.py  fake_edge_case_handling.py  no_op_indirection.py  over_split_logic.py  repeated_expensive_call_in_loop.py  repeated_expensive_work.py  style_drift.py  suspicious_comment_density.py  sync_blocking_in_async_context.py  unnecessary_config_surface.py  unnecessary_data_copy.py  useless_wrapper.py
slopguard/utils/: __init__.py  paths.py  subprocess.py  text.py
tests/: test_cli.py  test_config.py  test_diff_loader.py  test_scoring.py
tests/fixtures/: sample.py
