[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "slopguard"
version = "0.1.0"
description = "A PR quality and production-slop detector to stop bad patches before merge."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "SlopGuard Contributors" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "unidiff>=0.7.5",
    "tree-sitter>=0.21.0",
    "tree-sitter-javascript>=0.21.2",
    "tree-sitter-typescript>=0.21.2",
    "PyYAML>=6.0",
]

[project.scripts]
slopguard = "slopguard.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
]

[tool.hatch.build.targets.wheel]
packages = ["slopguard"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.mypy]
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true
